Fixing spilling artist names, fixes #118

--- a/src/scss/components/_lists.scss
+++ b/src/scss/components/_lists.scss
@@ -246,8 +246,10 @@
 
 			.col {
 				&.name {
-					width: 90% !important;
+					width: auto !important;
 					padding-right: 10%;
+					display: block;
+					float: none;
 				}
 
 				&.duration {
